objects/Expert_MTM__c.object
<CustomObject>
    <description>Case Experts</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Experts</relationshipLabel>
        <relationshipName>Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Case__r.Contact.FirstName &amp; &quot;, &quot; &amp;  Case__r.Contact.LastName</formula>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Expert__r.Department_Description__c</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select ABC employees tagged as &apos;Expert&apos;</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.Expert__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expert Center Cases</relationshipLabel>
        <relationshipName>Experts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Expert__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Expert__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Expert MTM</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Expert Record#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experts MTM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>